fix: width too wide main-content、sidebar width error

--- a/components/Layout/Main/style.module.scss
+++ b/components/Layout/Main/style.module.scss
@@ -12,4 +12,5 @@
 
 .mainContent {
   flex: 1;
+  max-width: 826px;
 }
